# Homework

./: .env.example  .gitignore  README.md  main.py  mylog.txt  pyproject.toml  requirements.txt
htmlcov/: index.html
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  read_csv.py  read_excel.py  utils.py  widget.py
test/: hidden_symbols.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_read_csv.py  test_read_excel.py  test_utils.py  test_widget.py
